<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_recent"
            android:icon="@drawable/ic_drawer_menu_new"
            android:title="@string/recent" />
        <item
            android:id="@+id/nav_chick"
            android:icon="@drawable/ic_drawer_menu_female"
            android:title="@string/chicks" />
        <item
            android:id="@+id/nav_dude"
            android:icon="@drawable/ic_drawer_menu_male"
            android:title="@string/dudes" />
        <item
            android:id="@+id/nav_terms"
            android:icon="@drawable/ic_drawer_menu_terms_and_conditions"
            android:title="@string/terms_conditions" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_whatsapp_admin"
                android:icon="@drawable/ic_drawer_menu_whatsapp"
                android:title="@string/whatsapp_admin" />
        </menu>
    </item>

</menu>
